fixed naming and get offers op
