# booking-schedule/backend/docs/bookings/swagger.json
@@ -28,7 +28,7 @@
                         "Bearer": []
                     }
                 ],
-                "description": "Adds an  associated with user with given parameters. NotificationPeriod is optional and must look like {number}s,{number}m or {number}h. Implemented with the use of transaction: first rooms availibility is checked. In case one's new booking request intersects with and old one(even if belongs to him), the request is considered erratic. startDate is to be before endDate and both should not be expired.",
+                "description": "Adds an  associated with user with given parameters. NotificationPeriod is optional and must look like {number}s,{number}m or {number}h. Implemented with the use of transaction: first offers availibility is checked. In case one's new booking request intersects with and old one(even if belongs to him), the request is considered erratic. startDate is to be before endDate and both should not be expired.",
                 "consumes": [
                     "application/json"
                 ],
@@ -155,17 +155,17 @@
                 }
             }
         },
-        "/get-vacant-rooms": {
+        "/get-vacant-offers": {
             "get": {
-                "description": "Receives two dates as query parameters. start is to be before end and both should not be expired. Responds with list of vacant rooms and their parameters for given interval.",
+                "description": "Receives two dates as query parameters. start is to be before end and both should not be expired. Responds with list of vacant offers and their parameters for given interval.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "bookings"
                 ],
-                "summary": "Get list of vacant rooms",
-                "operationId": "getRoomsByDates",
+                "summary": "Get list of vacant offers",
+                "operationId": "getOffersByDates",
                 "parameters": [
                     {
                         "type": "string",
@@ -190,7 +190,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/GetVacantRoomsResponse"
+                            "$ref": "#/definitions/GetVacantOffersResponse"
                         }
                     },
                     "400": {
@@ -498,7 +498,7 @@
                         "Bearer": []
                     }
                 ],
-                "description": "Updates an existing booking with given BookingID, suiteID, startDate, endDate values (notificationPeriod being optional). Implemented with the use of transaction: first room availibility is checked. In case one attempts to alter his previous booking (i.e. widen or tighten its' limits) the booking is updated.  If it overlaps with smb else's booking or with clients' another booking the request is considered unsuccessful. startDate parameter  is to be before endDate and both should not be expired.",
+                "description": "Updates an existing booking with given BookingID, offerID, startDate, endDate values (notificationPeriod being optional). Implemented with the use of transaction: first offer availibility is checked. In case one attempts to alter his previous booking (i.e. widen or tighten its' limits) the booking is updated.  If it overlaps with smb else's booking or with clients' another booking the request is considered unsuccessful. startDate parameter  is to be before endDate and both should not be expired.",
                 "consumes": [
                     "application/json"
                 ],
@@ -563,7 +563,7 @@
         },
         "/{suite_id}/get-vacant-dates": {
             "get": {
-                "description": "Responds with list of vacant intervals within month for selected suite.",
+                "description": "Responds with list of vacant intervals within month for selected offer.",
                 "produces": [
                     "application/json"
                 ],
@@ -571,7 +571,7 @@
                     "bookings"
                 ],
                 "summary": "Get vacant intervals",
-                "operationId": "getDatesBySuiteID",
+                "operationId": "getDatesByOfferID",
                 "parameters": [
                     {
                         "type": "integer",
@@ -617,8 +617,8 @@
             "type": "object",
             "required": [
                 "endDate",
-                "startDate",
-                "suiteID"
+                "offerID",
+                "startDate"
             ],
             "properties": {
                 "endDate": {
@@ -631,15 +631,15 @@
                     "type": "string",
                     "example": "24h"
                 },
+                "offerID": {
+                    "description": "Номер апаратаментов",
+                    "type": "integer",
+                    "example": 1
+                },
                 "startDate": {
                     "description": "Дата и время начала бронировании",
                     "type": "string",
                     "example": "2024-03-28T17:43:00Z"
-                },
-                "suiteID": {
-                    "description": "Номер апаратаментов",
-                    "type": "integer",
-                    "example": 1
                 }
             }
         },
@@ -677,15 +677,15 @@
                     "type": "string",
                     "example": "24h00m00s"
                 },
+                "offerID": {
+                    "description": "Номер апартаментов",
+                    "type": "integer",
+                    "example": 1
+                },
                 "startDate": {
                     "description": "Дата и время начала бронировании",
                     "type": "string",
                     "example": "2024-03-28T17:43:00Z"
-                },
-                "suiteID": {
-                    "description": "Номер апартаментов",
-                    "type": "integer",
-                    "example": 1
                 },
                 "updatedAt": {
                     "description": "Дата и время обновления",
@@ -780,13 +780,13 @@
                 }
             }
         },
-        "GetVacantRoomsResponse": {
+        "GetVacantOffersResponse": {
             "type": "object",
             "properties": {
-                "rooms": {
+                "offers": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/Suite"
+                        "$ref": "#/definitions/Offer"
                     }
                 }
             }
@@ -806,23 +806,58 @@
                 }
             }
         },
-        "Suite": {
+        "Offer": {
             "type": "object",
             "properties": {
-                "capacity": {
-                    "description": "Вместимость в персонах",
+                "beds_count": {
+                    "description": "Количество кроватей",
                     "type": "integer",
                     "example": 4
                 },
-                "name": {
-                    "description": "Название апартаментов",
+                "city": {
+                    "description": "Город",
                     "type": "string",
-                    "example": "Winston Churchill"
+                    "example": "Москва"
                 },
-                "suiteID": {
-                    "description": "Номер апартаментов",
+                "cost": {
+                    "description": "Стоимость за ночь",
+                    "type": "integer",
+                    "example": 4800
+                },
+                "house": {
+                    "description": "Номер дома",
+                    "type": "integer",
+                    "example": 88
+                },
+                "name": {
+                    "description": "Имя объявления",
+                    "type": "string",
+                    "example": "Продам гараж"
+                },
+                "offerID": {
+                    "description": "Номер объявления",
                     "type": "integer",
                     "example": 1
+                },
+                "rating": {
+                    "description": "Оценка объявления",
+                    "type": "integer",
+                    "example": 5
+                },
+                "short_description": {
+                    "description": "Краткое описание",
+                    "type": "string",
+                    "example": "продам в хорошие руки"
+                },
+                "street": {
+                    "description": "Улица",
+                    "type": "string",
+                    "example": "Пушкина"
+                },
+                "type": {
+                    "description": "Тип помещения",
+                    "type": "string",
+                    "example": "гараж"
                 }
             }
         },
@@ -830,8 +865,8 @@
             "type": "object",
             "required": [
                 "endDate",
-                "startDate",
-                "suiteID"
+                "offerID",
+                "startDate"
             ],
             "properties": {
                 "endDate": {
@@ -844,15 +879,15 @@
                     "type": "string",
                     "example": "24h"
                 },
+                "offerID": {
+                    "description": "Номер апаратаментов",
+                    "type": "integer",
+                    "example": 1
+                },
                 "startDate": {
                     "description": "Дата и время начала бронировании",
                     "type": "string",
                     "example": "2024-03-28T17:43:00Z"
-                },
-                "suiteID": {
-                    "description": "Номер апаратаментов",
-                    "type": "integer",
-                    "example": 1
                 }
             }
         },
